# gai-tti-svr

./: Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.devcontainer  devcontainer.json  postCreateCommand.sh
docs/: gai-tti.ipynb
test/integrationtest/: tti.ipynb
