[build-system]
requires = [ "setuptools>=42", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "gai-tti-svr"
version = "1.0.9"
description = "Refer to https://gai-labs.github.io/gai for more information"
readme = "README.md"
classifiers = [ "Programming Language :: Python :: 3.10", "Development Status :: 3 - Alpha", "License :: OSI Approved :: MIT License", "Intended Audience :: Science/Research", "Intended Audience :: Developers", "Operating System :: OS Independent", "Topic :: Software Development", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Scientific/Engineering :: Artificial Intelligence",]
requires-python = ">=3.10"
dependencies = [ "gai-sdk>=1.0.94",]
[[project.authors]]
name = "kakkoii1337"
email = "kakkoii1337@gmail.com"

